* Fixed issue with flatten() operation providing wrong results.

0.4 2016-10-16
~~~~~~~~~~~~~~

* Fixed wrong scaling factor in conversions related to the ideal gas law
  (10^2 vs. 10^-2) and barometric formula (10^-9 vs. 10^-6).

* Fixed error in algorithm to derive gravity from latitude and height.

* Fixed invalid sorting of collocation result file (which resulted in wrong
  results when performing a collocation resampling).

* Fixed wrong independent dimension length for altitude/pressure bounds for
  SCIAMACHY Level2 ingestion.

* Added apriori number density variables to SCIAMACHY Level2 ingestion.

* Added variable conversion from latitude/longitude per vertical profile point
  to single (mid-point) latitude/longitude for profile.

* Variable conversions for altitude and pressure bounds now also work when
  they are dependend on latitude and longitude dimensions.

* Fixed crash in derived variable conversion for volume mixing ratio from
  mass mixing ratio (for total air).

* Changed dimension argument of 'flatten()' operation from string to
  identifier.

* Fixed issue where -inf/+inf valid_min/valid_max attributes could not be
  exported as float values in the Python harp.export_product() interface.

* When deriving latitude/longitude bounds from mid points, latitude is now
  clamped to [-90,90] and longitude is wrapped to [-180,180].

* Fixed volume mixing ratio unit for GEOMS-TE-UVVIS-DOAS-OFFAXIS ingestion.

0.3 2016-09-30
~~~~~~~~~~~~~~

* The changes between 0.2 and 0.3 are extensive. The list below provides the
  most important aspects, but there are many more smaller changes that are not
  listed.

* HARP 'actions' are now called 'operations' and are now executed in a strict
  sequence. This means that you can now do things like:
    'derive(var); var < 10; exclude(var)'

* Added harpprofile command line tool that allows regridding and smoothing
  of vertical gridded data. 
  Also added harp_product_regrid_vertical_with_axis_variable(),