@@ -1,5 +1,7 @@
 * Fixed issue with flatten() operation providing wrong results.
 
+* Added support for GEOMS FTIR C2H2 ingestion.
+
 0.4 2016-10-16
 ~~~~~~~~~~~~~~
 
